--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,19 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
-        <!--<receiver android:name=".WifiReceiver">-->
+        <!--<receiver android:name="net.deepeshmakhijani.bpgclogin.WifiReceiver">-->
             <!--<intent-filter android:priority="100">-->
                 <!--<action android:name="android.net.wifi.STATE_CHANGE" />-->
             <!--</intent-filter>-->
         <!--</receiver>-->
+
+        <service android:name=".MyService" />
+
+
         <!--
  ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
@@ -69,11 +71,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
-        <service
-            android:name=".MyService"
-            android:enabled="true"
-            android:exported="true"></service>
     </application>
 
 </manifest>
